fixed sticky footer by giving html, body a height of 100% and the page-wrap a min-height of 100%

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -114,7 +114,7 @@ footer{
 }
 /*Sticky footer */
 .page-wrap {
-  height: 100%;
+  min-height: 100%;
   /* equal to footer height */
   margin-bottom: -100px; 
 }
